<resources>
    <string name="app_name">CardApp</string>
    <string name="map">Map</string>
    <string name="cards">Cards</string>
    <string name="user">User</string>
    <string name="imageDescription">Your Image</string>
    <string name="about_app">About App</string>
    <string name="share_app">Share app</string>
    <string name="settings">Settings</string>
    <string name="how_to_use">How to use?</string>
    <string name="favorites">Favorites</string>
    <string name="moonless_linew" translatable="false">moonless_linew</string>
    <string name="log_in_with_google" translatable="false">Log in with Google</string>
    <string name="log_in_with_name">Log in with name</string>
    <string name="log_in_with_phone">Log in with phone</string>
    <string name="markers_showing_slide_states">Markers showing slide states</string>
    <string name="how_is_it_your_name">How is it your name?</string>
    <string name="continue_text">Continue</string>
    <string name="name">Name</string>
    <string name="write_your_name">Write your name</string>
    <string name="about">about</string>
    <string name="what_is_it_your_name">What is your name?</string>
    <string name="log_out">Log Out</string>
    <string name="error">Something went wrong</string>
    <string name="internet_error">No internet!</string>
    <string name="what_is_your_phone_number">What is your\nphone number?</string>
    <string name="your_cards">Cards</string>
    <string name="image_of_feature">image of feature</string>
    <string name="name_error">Name must be not empty and less than 30</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="phone_format" translatable="false">+7 (___) ___ - __ - __</string>
    <string name="phone_error">"Enter phone number"</string>
    <string name="enter_sms_code">Enter SMS code</string>
    <string name="too_much_requests">Too many SMS</string>
    <string name="wrong_code">Wrong code</string>
    <string name="add_description">add new card</string>
    <string name="disk_link">Download the coolest app in the World!!\n https://disk.yandex.ru/d/uasodtkR8Olhhw</string>
    <string name="share_card">Download the coolest app in the World!!\n https://disk.yandex.ru/d/uasodtkR8Olhhw</string>
    <string name="image_of_store">image of store</string>
    <string name="searchShop">Search shop</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="label" translatable="false">Developed by 8 team \n Special for Alfa-Bank</string>
    <string name="qr_code_of_your_card">qr code of your card</string>
    <string name="name_of_the_market">NAME OF THE MARKET</string>
    <string name="test_id">id: 1324 1234 1231 1234</string>
    <string name="app_icon">app icon</string>
    <string name="scan_card">Scan card</string>
    <string name="enter_id">Enter ID</string>
    <string name="done">Done</string>
    <string name="add_new_card">Add new card</string>
    <string name="about_card_app">About CardApp</string>
    <string name="account">Account</string>
    <string name="functional">Functional</string>
    <string name="do_whatever">Do whatever you want</string>
    <string name="easy_to_use">Easy to use</string>
    <string name="show_this_app_your_grandmother">Show this app your grandmother</string>
    <string name="smart">Smart</string>
    <string name="gps_feature">Can choose card, using GPS</string>
    <string name="fast">Fast</string>
    <string name="made_with_love">Made with love</string>
    <string name="pref_notifications">Enable message notifications</string>
    <string name="send_feedback">Send feedback</string>
    <string name="report">Report bugs</string>
    <string name="small_id">Card ID must be more than 5</string>
    <string name="delete_card">delete card</string>
    <string name="needPermission">Need permission for GPS sort</string>
    <string name="choose_market">Choose market</string>
    <string name="no_available_markets">No available markets</string>
</resources>
