<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main">
        <item
            android:id="@+id/userFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/user" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>


    </group>
    <group
        android:id="@+id/helpers">
        <item
            android:id="@+id/shareFragment"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share_app"/>
        <item
            android:id="@+id/descriptionFragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_app" />

    </group>


</menu>