<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:tint="?attr/colorOnBackground"
            android:id="@+id/share"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_card"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_baseline_share_24"
            android:layout_weight="1"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_weight="1"
            android:tint="?attr/colorOnBackground"
            android:id="@+id/delete"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_card"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_baseline_delete_24" />
    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottomSheetMarketName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_the_market"
        android:gravity="center"
        style="@style/TextAppearance.Material3.HeadlineSmall"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bottomSheetCardId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_id"
        android:gravity="center"
        style="@style/TextAppearance.Material3.BodyMedium"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        android:id="@+id/bottomSheetQrView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_baseline_qr_code_2_24"

        android:contentDescription="@string/qr_code_of_your_card" />


</LinearLayout>
