<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:elevation="10dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEnterID">

        <RelativeLayout
            android:id="@+id/RelativeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/iconCard"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image_of_store" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/marketName"
                android:textColor="@color/white"
                style="@style/TextAppearance.Material3.HeadlineLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/cardID"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:minHeight="46dp"
                android:text="" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardID"
                android:textColor="@color/white"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:minHeight="24dp"
                android:text="" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEnterID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:hint="@string/enter_id"
        app:endIconDrawable="@drawable/ic_baseline_qr_code_scanner_24"
        app:endIconMode="custom"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-7dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="35"
            tools:visibility="invisible" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>